# osu-api-rs

./: Cargo.toml  README.md
src/: api.rs  entity.rs  error.rs  lib.rs  main.rs
src/private/: api.rs  mod.rs
src/util/: enum.rs  mod.rs
src/v1/: api.rs  entity.rs
src/v2/: api.rs  entity.rs  mod.rs
