[package]
name = "osu-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1",features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
#oauth2 = "4.3.0"

reqwest = { version = "0.11.12",features = ["json"]}